<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Farah</string>
    <string name="coming_son">Coming Soon</string>
    <string name="noNetworkFound">You\'re not connected to the Internet. Please connect and retry. </string>
    <string name="msg_NO_INTERNET_RESPOND">Please connect your internet connection</string>
    <string name="msg_please_wait">Please wait …</string>
    <string name="msg_server_error">Something went wrong please try again</string>
    <string name="msg_press_back_twice">Double tab to back</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok">OK</string>
    <string name="str_or">OR</string>
    <string name="str_submit">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_email">Email</string>
    <string name="str_fname">First Name</string>
    <string name="str_lname">Last Name</string>
    <string name="str_email_mobil">Email or mobile number</string>
    <string name="str_pwd">Password</string>
    <string name="str_conf_pwd">Confirm Password</string>
    <string name="str_old_pwd">Old Password</string>
    <string name="str_new_pwd">New Password</string>
    <string name="str_login">Login</string>
    <string name="str_buy">Purchase</string>
    <string name="str_login1">Log In</string>
    <string name="str_mobil">Phone number</string>
    <string name="str_forgot">Forgot Password ?</string>
    <string name="str_sign_up_here">Sign up here</string>
    <string name="str_sign_up_here1">Don\'t have account? <font fgcolor='#8B67AF'>Sign Up</font></string>
    <string name="str_sign_up">Register</string>
    <string name="str_reset">Please enter your registered mobile number to reset your password</string>
    <string name="str_are_u_sure">Are you sure ?</string>
    <string name="str_deactive_msg">Do you want to deactive account ?</string>
    <string name="str_del_ad">Do you want to delete ?</string>
    <string name="str_logout">Do you want to logout ?</string>
    <string name="str_remove">Do you want to remove ?</string>
    <string name="str_cler_msg">Do you want to clear all data ?</string>
    <string name="str_favorite_msg">Do you want to favourite ads ?</string>
    <string name="str_un_favorite_msg">Do you want to unfavourite ads ?</string>
    <string name="str_update">Update</string>
    <string name="str_location">Location</string>
    <string name="str_adrs">Addrerss</string>
    <string name="str_web">Website</string>
    <string name="str_fb">Facebook account</string>
    <string name="str_gmail">Gmail account</string>
    <string name="str_insta">Instagram account</string>
    <string name="str_verify">Verify</string>
    <string name="str_find_loc">Find Location</string>
    <string name="str_confirm_loc">Confirm Location</string>
    <string name="err_email_mobil">Please enter your email or mobile number</string>
    <string name="err_email">Please enter your email address</string>
    <string name="err_valid_email">Please enter valid your email address</string>
    <string name="err_pwd">Please enter your password</string>
    <string name="err_pwd1"> Please enter password between 6 to 20 characters !</string>
    <string name="err_conf_pwd">Please enter your confirm password</string>
    <string name="err_conf_pwd1">Please enter confirm password between 6 to 20 characters !</string>
    <string name="err_invalid">Invalid email or password</string>
    <string name="err_mismatch">Password and confirm password doesn\'t match</string>
    <string name="err_camera">Please select your image</string>
    <string name="err_name">Please enter your name</string>
    <string name="err_fname">Please enter your first name</string>
    <string name="err_lname">Please enter your last name</string>
    <string name="err_mobil">Please enter your phone number</string>
    <string name="err_old_pwd">Please enter your old password</string>
    <string name="err_new_pwd">Please enter your new password</string>
    <string name="err_invalid_otp">Please enter valid otp code</string>
    <string name="err_cancel">Failed Transaction, please try again.</string>
    <string name="err_payment">Your payment failed, please try again after sometime.</string>
    <string name="err_cate">Please select category</string>
    <string name="err_image">Please select image or video</string>
    <string name="err_titl">Please select title</string>
    <string name="err_titl1">Title require minimum 3 characters !</string>
    <string name="err_price">Please select price</string>
    <string name="err_desc">Please select description</string>
    <string name="err_loc">Please select location</string>
    <string name="err_youtub">Please enter valid youtube url</string>
    <string name="err_enter">Please enter </string>
    <string name="err_select">Please select </string>
    <string name="err_ad_owner">You are owner of this ad.</string>
    <string name="err_no_usr">You are not able to chat with this user.</string>
    <string name="err_web">Please enter valid website.</string>
    <string name="err_fb">Please enter valid facebook URL.</string>
    <string name="err_google">Please enter valid google URL.</string>
    <string name="err_insta">Please enter valid instagram URL.</string>
    <string name="err_finger">Your Touch ID not registered with our system.</string>
    <string name="err_del_ad">Ad Deleted.</string>
    <string name="err_expir_ad">Ad Expired.</string>
    <string name="err_govern">Please select first governorate.</string>
    <string name="err_city">Please select first city.</string>
    <string name="err_block">Please select block.</string>
    <string name="err_startdate">Please select start date</string>
    <string name="err_endate">Please select end date</string>
    <string name="err_date_compare">Please select  end date after start date</string>
    <string name="want_added">Ads added in want list.</string>
    <string name="want_remove">Ads removed in want list.</string>
    <string name="paym_success">Payment successfully done.</string>
    <string name="ads_rem_success">The ad has been deleted successfully.</string>
    <string name="ads_update_success">Ad updated successfully.</string>
    <string name="profile_update_success">Profile updated successfully.</string>
    <string name="pwd_success">Password successfully changed.</string>
    <string name="pwd_fail">Old password does not match.</string>
    <string name="done_forgot">Please check your registered email inbox, we have sent you a link to reset your password.</string>
    <string name="otp_verify">Please type the verification code sent to</string>
    <string name="subscr_credit">You don\'t have ad\'s credit, would you like to purchase a plan ?</string>
    <string name="menu_title_1">Home</string>
    <string name="menu_title_2">Categories</string>
    <string name="menu_title_3">Offers and packages</string>
    <string name="menu_title_4">Single services</string>
    <string name="menu_title_5">Contact us</string>
    <string name="menu_title_6">Settings</string>
    <string name="menu_title_7">My account</string>
    <string name="menu_title_8">Share the App</string>
    <string name="menu_title_9">My favorites</string>
    <string name="menu_title_10">My Wishlist</string>
    <string name="menu_title_11">Subscription</string>
    <string name="menu_title_12">Transaction</string>
    <string name="menu_title_13">Advertise with us</string>
    <string name="menu_title_14">Notifications</string>
    <string name="menu_title_15">Log out</string>
    <string name="menu_title_16">About Us</string>
    <string name="menu_title_17">Terms Condition</string>
    <string name="menu_title_18">Privacy Policy</string>
    <string name="menu_title_19">Effective Package</string>
    <string name="menu_title_20">Available Package</string>
    <string name="tab_title_1">All Categories</string>
    <string name="tab_title_2">Latest ads</string>
    <string name="tab_title_3">Map</string>
    <string name="str_show">Show</string>
    <string name="str_delted">Deleted</string>
    <string name="locationdenied">Please turn on GPS to see the distance</string>
    <string name="str_km_away">km away from your location</string>
    <string name="no_record_found">No record found.</string>
    <string name="no_rcnt_post">No ads available.</string>
    <string name="no_rcnt_vw">No recent view post found at the moments.</string>
    <string name="no_post">No ads available.</string>
    <string name="no_category">No categories found at the moments.</string>
    <string name="no_fav">No favorites found at the moments.</string>
    <string name="no_want">No wanted items found at the moments.</string>
    <string name="no_my_ads">You don\'t have ads.</string>
    <string name="no_chat">There is no chat</string>
    <string name="no_search">No search results found.</string>
    <string name="no_msg">No messages.</string>
    <string name="str_adver_ci">Contact Information</string>
    <string name="str_aggree_term">I agree terms and condition</string>
    <string name="str_share">Share social media</string>
    <string name="str_acunt_mgnt">Account management</string>
    <string name="str_chng_pwd">Change Password</string>
    <string name="str_share_phn">Share Phone Number</string>
    <string name="str_deactive">Deactive account</string>
    <string name="str_deactive1">Account Deactivated</string>
    <string name="str_deactive2">Your account deactivated by you. Do you want to reactivate it again?</string>
    <string name="str_deactive3">Kindly check your email, to reactivate your account.</string>
    <string name="str_deactive4">Your account deactivated by the admin.</string>
    <string name="str_lang_e">English</string>
    <string name="str_lang_a">عربى</string>
    <string name="str_category">Category</string>
    <string name="str_rental_prod">Best rental product</string>
    <string name="str_title">Title</string>
    <string name="str_price">Price</string>
    <string name="str_desc">Description</string>
    <string name="str_youtube">Youtube URL</string>
    <string name="str_govern">Governorate</string>
    <string name="str_region">Region</string>
    <string name="str_village">Neighborhood or village</string>
    <string name="str_city">City</string>
    <string name="str_block">Block</string>
    <string name="str_select_lang">Select Language</string>
    <string name="str_street">Street</string>
    <string name="str_jada">Jada</string>
    <string name="str_post">Post</string>
    <string name="str_upload_iv">Upload image or video</string>
    <string name="str_call">Call</string>
    <string name="str_whatsapp">Whatsapp</string>
    <string name="str_colon">:</string>
    <string name="str_model">Model</string>
    <string name="str_expir_dt">Expiry Date</string>
    <string name="str_ad_post">Ad posted at %s </string>
    <string name="str_avail">Available</string>
    <string name="str_unavail">Unavailable</string>
    <string name="str_no_of_post">Ads Remaining</string>
    <string name="str_consume">Consumed</string>
    <string name="str_kwd">SYP</string>
    <string name="str_purch_on">Purchase Date</string>
    <string name="tit_signup">SIGN UP</string>
    <string name="menu_home_title_1">Home</string>
    <string name="menu_home_title_2">Favorites</string>
    <string name="menu_home_title_3">Post Ads</string>
    <string name="menu_home_title_4">Profile</string>
    <string name="menu_home_title_5">More</string>
    <string name="label_rememberpassword">Remember Me</string>
    <string name="passowrd">Password</string>
    <string name="loginasguest_label"><u>Continue as Guest</u></string>
    <string name="login_back">Already have an account?<font fgcolor='#8B67AF'>Login</font></string>
</resources>